---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 26/9/25
  Bugfixes:
    - Trade generation inside a single hex core no longer permits infinite trade loops between two trades (preserving performance).
        Single-hex loops of three trades or more are still possible but are very unlikely, and detection of such more heavily impacts performance.
    - Fixed the quadratic interpolation of random trade volume sampling, making higher valued items show up in trades closer to the center of each planet.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 27/8/25
  Translation:
    - Updated Russian translations. (courtesy Shadow_Man)
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 22/8/25
  Major Features:
    - Moved dungeons off of the oceans and into the main bulk of land.
    - All land hexes on all planets are now claimable, instead of possibly being separated by liquid hexes.
  Features:
    - Dungeon turrets and walls now fall when the dungeon is looted.
    - Hex cores generate inside dungeons. They get auto-claimed upon looting their dungeon.
    - There are now easy, medium, and hard types of dungeons to fight on each planet, containing appropriate amounts of loot.
  Minor Features:
    - JSON trades export now includes core quality information and whether the core is or was in a dungeon.
  Balancing:
    - Made dungeons smaller and have better loot on each planet.
    - Coins are now found in every dungeon loot chest, an amount proportional to the overall loot value.
    - Rebalanced dungeon difficulties.
    - Nerfed [item=atomic-bomb]. Can be tweaked or disabled in mod settings.
    - Added per-planet global trade productivity modifiers. Can be tweaked or disabled in mod settings.